@@ -296,14 +296,14 @@
         {
         "Name" = "8:Microsoft Visual Studio"
         "ProductName" = "8:TWAIN 2.0 DS 32bit Sample"
-        "ProductCode" = "8:{F1573A15-ABC0-4318-A3F0-2D727ACD1167}"
-        "PackageCode" = "8:{FF465AF6-4D5A-4D7B-B087-8083A2DD10CF}"
+        "ProductCode" = "8:{5147D271-675D-424F-9841-0AA1E034F685}"
+        "PackageCode" = "8:{CC446D88-F633-412A-95F0-46D3E09C40B0}"
         "UpgradeCode" = "8:{42397C41-AA95-45D0-A500-A692EB1A93B4}"
         "RestartWWWService" = "11:FALSE"
         "RemovePreviousVersions" = "11:FALSE"
         "DetectNewerInstalledVersion" = "11:TRUE"
         "InstallAllUsers" = "11:TRUE"
-        "ProductVersion" = "8:1.0.4"
+        "ProductVersion" = "8:1.0.5"
         "Manufacturer" = "8:TWAIN Working Group"
         "ARPHELPTELEPHONE" = "8:http://www.twainforum.org/phpBB2/index.php"
         "ARPHELPLINK" = "8:http://sourceforge.net/projects/twain-samples/"
