@@ -291,14 +291,14 @@
         {
         "Name" = "8:Microsoft Visual Studio"
         "ProductName" = "8:TWAIN 2.0 DS 64bit Sample"
-        "ProductCode" = "8:{B1EA1B6B-C6B5-4C26-80E7-E3D995E63AFC}"
-        "PackageCode" = "8:{FA258E05-A2D4-4980-A0DC-796582CB0AC1}"
+        "ProductCode" = "8:{21B76EBB-2D69-434A-ACF9-204A1169744A}"
+        "PackageCode" = "8:{DD598F22-9318-4D81-B40B-7D37642360C4}"
         "UpgradeCode" = "8:{C2305D08-ACCD-48FD-8147-F655F8356F23}"
         "RestartWWWService" = "11:FALSE"
         "RemovePreviousVersions" = "11:FALSE"
         "DetectNewerInstalledVersion" = "11:TRUE"
         "InstallAllUsers" = "11:TRUE"
-        "ProductVersion" = "8:1.0.4"
+        "ProductVersion" = "8:1.0.5"
         "Manufacturer" = "8:TWAIN Working Group"
         "ARPHELPTELEPHONE" = "8:http://www.twainforum.org/phpBB2/index.php"
         "ARPHELPLINK" = "8:http://sourceforge.net/projects/twain-samples/"
